[metadata]
name=
version=
url=
author = Cameron Lawson
author_email = cam.lawson@gmail.com
description =
long_description = file: README.rst
license =  BSD-3-Clause
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation =
    Release Notes =
    Source =
    Tracker =

[options]
python_requires = >=3.6
packages = find:
scripts =
include_package_data = true
zip_safe = false
install_requires = file: requirements.txt

